[package]
name = "tangled"
version = "0.1.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/IntQuant/tangled"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
tracing = "*"
dashmap = "5.3.4"
serde = {features = ["derive"], version = "1.0.142"}
bincode = "1.3.3"

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}